syntax = "proto3";

package catalog.api;

option go_package = "gitlab.ozon.dev/pircuser61/catalog/api";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service catalog {
  rpc GoodCreate(GoodCreateRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/Good"
      body: "*"
    };
  }

  rpc GoodGet(GoodGetRequest) returns (GoodGetResponse) {
    option (google.api.http) = {
      get: "/v1/Good/{code}"
    };
  }

  rpc GoodList(google.protobuf.Empty) returns (GoodListResponse) {
    option (google.api.http) = {
      get: "/v1/Goods"
    };
  }

  rpc GoodUpdate(GoodUpdateRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/v1/Good"
      body: "*"
    };
  }

  rpc GoodDelete(GoodDeleteRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/Good"
      body: "*"
    };
  }
}


// ---------------------------------------------------------------------------------------------------------------------
// GoodCreate
// ---------------------------------------------------------------------------------------------------------------------

message GoodCreateRequest {
    string name = 1;
    string unitOfMeasure = 2;
    string country = 3;
}


// ---------------------------------------------------------------------------------------------------------------------
// GoodList
// ---------------------------------------------------------------------------------------------------------------------

message GoodListResponse {
  repeated Good Goods = 1;

  message Good {
    uint64 code = 1;
    string name = 2;
    
  }
}

// ---------------------------------------------------------------------------------------------------------------------
// GoodUpdate
// ---------------------------------------------------------------------------------------------------------------------

message GoodUpdateRequest {
    uint64 code = 1;
    string name = 2;
    string unitOfMeasure = 3;
    string country = 4;
}

// ---------------------------------------------------------------------------------------------------------------------
// GoodGet
// ---------------------------------------------------------------------------------------------------------------------

message GoodGetRequest {
    uint64 code = 1;
}
message GoodGetResponse {
    uint64 code = 1;
    string name = 2;
    string unitOfMeasure = 3;
    string country = 4;
}

// ---------------------------------------------------------------------------------------------------------------------
// GoodDelete
// ---------------------------------------------------------------------------------------------------------------------

message GoodDeleteRequest {
    uint64 code = 1;
}

